# chaos_spaces

./: .gitignore  README.md  flake.nix
apps/server/: .env.example  Cargo.toml  openapi.json
apps/server/.sqlx/: query-06ccd528b7286069640d4079d8b7b1e020cdd13d60cb3afaff4cbdd09b039571.json  query-82e022fcf8e81dc7a59babddf9da14bee33e520b82405c9c0932425e5cde4c2b.json  query-8558fa00774a0808f3421560247b31b85e04b37cbef7976bb6a8a1218fad0813.json  query-c76dd46efef23f36e54a88fe8c1fca20ae8aef5c9ade3d3563017a403a02f168.json  query-c93249ac451d49b798058721397d0a940a0cabf54dbb0529e2de6df0c6e91d27.json  query-d9ab67e5178d8f9f33777601e9a6a6b6047b09bd5de48ec6000c9dbf1be40785.json  query-e5a740f4e35ca9e5824c512d30d1cf80ce755c00c3544edacdd44af99e59629b.json  query-e67384879438b5e75193f5a97ffb85ba5ba629d33ffafc5a6f75027f6b109f1b.json
apps/server/migrations/: 001_space.sql  002_space_log.sql
apps/server/src/: config.rs  main.rs
apps/server/src/core/: error.rs  mod.rs
apps/server/src/core/types/: ulid.rs
apps/server/src/http/: mod.rs  openapi.rs  serve.rs
apps/server/src/http/stats/: mod.rs  overview.rs
apps/server/src/jobs/: fetch_spaces.rs  mod.rs  sync_directory.rs
