[package]
name = "chaos_spaces"
edition = "2024"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
serde_json = "1.0.145"
tracing = "0.1.41"
ulid = "1.2.1"

[dependencies.astrolabe]
git = "https://github.com/GiyoMoon/astrolabe.git"
rev = "70bf271842415a09da05e64b85e726fccbe1f06f"
features = ["serde", "sqlx-sqlite"]

[dependencies.axum-extra]
version = "0.12.1"
features = ["cookie"]

[dependencies.clap]
version = "4.5.51"
features = ["derive", "env"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "sqlite", "macros"]

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.6.6"
features = ["fs", "trace", "limit"]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras"]

